--- a/res/layout/activity_note.xml
+++ b/res/layout/activity_note.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
+    <include layout="@layout/toolbar"/>
     <fragment android:name="in.eigene.miary.fragments.NoteFragment"
               android:id="@+id/fragment_note"
               android:layout_width="match_parent"
