--- a/res/menu/note_fragment.xml
+++ b/res/menu/note_fragment.xml
@@ -1,51 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
 >
     <item
             android:id="@+id/menu_item_note_starred"
             android:icon="@drawable/ic_starred"
             android:title="@string/note_unstar"
-            android:showAsAction="ifRoom"
             android:visible="false"
+            app:showAsAction="ifRoom"
     />
     <item
             android:id="@+id/menu_item_note_not_starred"
             android:icon="@drawable/ic_not_starred"
             android:title="@string/note_star"
-            android:showAsAction="ifRoom"
             android:visible="false"
+            app:showAsAction="ifRoom"
     />
     <item
             android:id="@+id/menu_item_note_color"
             android:icon="@drawable/ic_colorpicker_dark"
             android:title="@string/note_color"
-            android:showAsAction="ifRoom"
+            app:showAsAction="ifRoom"
     />
     <item
             android:id="@+id/menu_item_note_share"
-            android:icon="@android:drawable/ic_menu_share"
-            android:showAsAction="ifRoom"
             android:title="@string/note_share"
+            app:showAsAction="ifRoom"
+            app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
     />
     <item
             android:id="@+id/menu_item_note_draft"
             android:title="@string/note_draft"
-            android:showAsAction="never"
+            app:showAsAction="never"
     />
     <item
             android:id="@+id/menu_item_note_not_draft"
             android:title="@string/note_not_draft"
-            android:showAsAction="never"
+            app:showAsAction="never"
     />
     <item
             android:id="@+id/menu_item_note_custom_date"
             android:title="@string/note_set_custom_date"
-            android:showAsAction="never"
+            app:showAsAction="never"
     />
     <item
             android:id="@+id/menu_item_note_remove"
             android:title="@string/note_remove"
-            android:showAsAction="never"
+            app:showAsAction="never"
     />
 </menu>
