--- a/res/layout/fragment_note.xml
+++ b/res/layout/fragment_note.xml
@@ -3,13 +3,13 @@
               android:id="@+id/note_edit_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="16dp"
+              android:paddingTop="?attr/actionBarSize"
               android:focusableInTouchMode="true"
 ><!-- http://stackoverflow.com/a/8639921/359730 -->
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?attr/actionBarSize"
+            android:padding="16dp"
             android:orientation="vertical"
     >
         <LinearLayout
