--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -34,23 +34,20 @@
             <include android:id="@+id/drawer_item_diary" layout="@layout/drawer_item"/>
             <include android:id="@+id/drawer_item_starred" layout="@layout/drawer_item"/>
             <include android:id="@+id/drawer_item_drafts" layout="@layout/drawer_item"/>
-
-            <!--
-            TODO: future features.
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/drawer_item_margin"
-                    android:layout_marginTop="@dimen/drawer_item_margin"
-                    android:textColor="@color/dark_gray_text_color"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
-                    android:text="Labels"
-                    style="@android:style/TextAppearance.Small"
-                    />
-            <include layout="@layout/drawer_section"/>
-            -->
         </LinearLayout>
     </android.support.v4.widget.DrawerLayout>
     <include layout="@layout/toolbar"/>
+    <ImageButton
+            android:id="@+id/fab_button"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
+            android:layout_margin="15dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/ic_create_white_24dp"
+            android:tint="@android:color/white"
+            android:background="@drawable/fab"
+            android:scaleType="center"
+    />
 </RelativeLayout>
