--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -11,14 +11,31 @@
             android:layout_height="match_parent"
             android:background="@color/background_holo_light"
     >
-        <fragment android:name="in.eigene.miary.fragments.FeedFragment"
-                  android:id="@+id/fragment_feed"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_marginLeft="@dimen/feed_horizontal_margin"
-                  android:layout_marginRight="@dimen/feed_horizontal_margin"
-                  tools:layout="@layout/fragment_feed"
-        />
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <fragment android:name="in.eigene.miary.fragments.FeedFragment"
+                      android:id="@+id/fragment_feed"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:layout_marginLeft="@dimen/feed_horizontal_margin"
+                      android:layout_marginRight="@dimen/feed_horizontal_margin"
+                      tools:layout="@layout/fragment_feed"
+            />
+            <ImageButton
+                    android:id="@+id/fab_button"
+                    android:layout_width="58dp"
+                    android:layout_height="58dp"
+                    android:layout_margin="15dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:src="@drawable/ic_create_white_24dp"
+                    android:tint="@android:color/white"
+                    android:background="@drawable/fab"
+                    android:scaleType="center"
+            />
+        </RelativeLayout>
         <!-- Navigation drawer. -->
         <LinearLayout
                 android:id="@+id/drawer"
@@ -37,17 +54,4 @@
         </LinearLayout>
     </android.support.v4.widget.DrawerLayout>
     <include layout="@layout/toolbar"/>
-    <ImageButton
-            android:id="@+id/fab_button"
-            android:layout_width="58dp"
-            android:layout_height="58dp"
-            android:layout_margin="15dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/ic_create_white_24dp"
-            android:tint="@android:color/white"
-            android:background="@drawable/fab"
-            android:scaleType="center"
-    />
 </RelativeLayout>
