--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -51,6 +51,8 @@
             <include android:id="@+id/drawer_item_diary" layout="@layout/drawer_item"/>
             <include android:id="@+id/drawer_item_starred" layout="@layout/drawer_item"/>
             <include android:id="@+id/drawer_item_drafts" layout="@layout/drawer_item"/>
+            <include layout="@layout/drawer_divider"/>
+            <include android:id="@+id/drawer_item_settings" layout="@layout/drawer_item"/>
         </LinearLayout>
     </android.support.v4.widget.DrawerLayout>
 </RelativeLayout>
