--- a/res/layout/activity_pin.xml
+++ b/res/layout/activity_pin.xml
@@ -4,6 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
+              android:padding="32dp"
 >
     <ImageView
             android:layout_width="wrap_content"
@@ -26,23 +27,17 @@
             style="@android:style/TextAppearance.Medium"
             android:textStyle="italic"
             android:gravity="center"
-            android:layout_marginBottom="60dp"
-    />
-    <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/pin_required"
-            style="@android:style/TextAppearance.Medium"
-            android:textStyle="italic"
-            android:gravity="center"
     />
     <EditText
             android:id="@+id/pin_edit_text"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@android:style/TextAppearance.Large"
             android:inputType="numberPassword"
             android:maxLength="4"
             android:gravity="center"
+            android:hint="@string/pin_required"
+            android:textSize="34dp"
+            android:layout_marginTop="@dimen/pin_margin"
+            android:layout_marginBottom="@dimen/pin_margin"
     />
 </LinearLayout>
