--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -6,4 +6,12 @@
         <item name="colorAccent">@color/holo_blue_light</item>
         <item name="android:textColor">@android:color/primary_text_light</item>
     </style>
+    <style name="Miary.Theme.Fullscreen" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@color/fullscreen_background</item>
+        <item name="colorPrimary">@color/holo_blue_light</item>
+        <item name="colorPrimaryDark">@color/holo_blue_dark</item>
+        <item name="colorAccent">@color/holo_blue_light</item>
+        <item name="android:textColor">@android:color/primary_text_light</item>
+        <item name="android:editTextStyle">@android:style/Widget.Holo.EditText</item>
+    </style>
 </resources>
