--- a/app/src/main/res/layout/drawer_account_item.xml
+++ b/app/src/main/res/layout/drawer_account_item.xml
@@ -10,6 +10,7 @@
     android:paddingTop="8dp"
     android:orientation="vertical"
     android:background="@drawable/drawer_item_background"
+    android:clickable="true"
 >
     <ImageView
         android:layout_width="wrap_content"
