--- a/app/src/main/res/layout/drawer_counter_item.xml
+++ b/app/src/main/res/layout/drawer_counter_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="center_vertical"
-        android:background="@drawable/drawer_item_background"
+    android:layout_width="match_parent"
+    android:layout_height="48dp"
+    android:gravity="center_vertical"
+    android:background="@drawable/drawer_item_background"
+    android:clickable="true"
 >
     <ImageView
             android:id="@+id/drawer_item_icon"
