--- a/app/src/main/res/menu/developer.xml
+++ b/app/src/main/res/menu/developer.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_item_developer_disable_flag_secure" android:title="Disable setting FLAG_SECURE"/>
     <item android:id="@+id/menu_item_developer_clear_shared_preferences" android:title="Clear shared preferences"/>
+    <item android:id="@+id/menu_item_developer_reset_migrated" android:title="Reset migrated flag"/>
     <item android:id="@+id/menu_item_developer_log_out" android:title="Log out"/>
     <item android:id="@+id/menu_item_developer_add_sample_notes" android:title="Add sample notes"/>
     <item android:id="@+id/menu_item_developer_delete_all_notes" android:title="Delete all notes"/>
