--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- http://stackoverflow.com/a/8639921/359730 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/note_edit_layout"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:focusableInTouchMode="true">
+<!--
+    Stop EditText from gaining focus at Activity startup.
+    https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup/8639921#8639921
+ -->
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/note_edit_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
-            android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
-
-            <EditText
-                    android:id="@+id/note_edit_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    style="@android:style/TextAppearance.Medium"
-                    android:hint="@string/note_title_hint"
-                    android:background="@android:color/transparent"
-                    android:padding="@dimen/note_edit_text_padding"
-                    android:capitalize="sentences"
-                    android:layout_weight="1"/>
-            <ImageButton
-                    android:id="@+id/note_button_leave_fullscreen"
-                    android:layout_width="@dimen/launcher_icon_size"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_fullscreen_exit_black_24dp"
-                    android:background="@null"
-                    android:visibility="gone"
-                    android:scaleType="center"/>
-        </LinearLayout>
         <EditText
-                android:id="@+id/note_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textMultiLine|textCapSentences"
-                android:gravity="top|start"
-                android:scrollbars="vertical"
-                style="@android:style/TextAppearance.Medium"
-                android:hint="@string/note_hint"
-                android:background="@android:color/transparent"
-                android:padding="@dimen/note_edit_text_padding"/>
+            android:id="@+id/note_edit_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@android:style/TextAppearance.Medium"
+            android:hint="@string/note_title_hint"
+            android:background="@android:color/transparent"
+            android:padding="@dimen/note_edit_text_padding"
+            android:layout_weight="1"
+            android:inputType="textCapSentences"/>
+        <ImageButton
+            android:id="@+id/note_button_leave_fullscreen"
+            android:layout_width="@dimen/launcher_icon_size"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_fullscreen_exit_black_24dp"
+            android:background="@null"
+            android:visibility="gone"
+            android:scaleType="center"/>
     </LinearLayout>
+    <EditText
+        android:id="@+id/note_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine|textCapSentences"
+        android:gravity="top|start"
+        android:scrollbars="vertical"
+        style="@android:style/TextAppearance.Medium"
+        android:hint="@string/note_hint"
+        android:background="@android:color/transparent"
+        android:padding="@dimen/note_edit_text_padding"/>
 </LinearLayout>
