--- a/app/src/main/res/layout/activity_authenticator.xml
+++ b/app/src/main/res/layout/activity_authenticator.xml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
->
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <include layout="@layout/toolbar"/>
+
     <LinearLayout
-            android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/fullscreen_dialog_padding">
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/fullscreen_dialog_padding"
-    >
-        <EditText
+            android:layout_height="wrap_content">
+
+            <EditText
                 android:id="@+id/auth_email_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/text_field_vertical_padding"
-                android:paddingBottom="@dimen/text_field_vertical_padding"
                 android:hint="@string/email_hint"
                 android:inputType="textEmailAddress"
-                android:singleLine="true"
-        />
-        <EditText
+                android:singleLine="true"/>
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
                 android:id="@+id/auth_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/text_field_vertical_padding"
-                android:paddingBottom="@dimen/text_field_vertical_padding"
-                android:inputType="textPassword"
                 android:hint="@string/password_hint"
-                android:singleLine="true"
-        />
+                android:inputType="textPassword"
+                android:singleLine="true"/>
+        </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 </LinearLayout>
