--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,47 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
->
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <include layout="@layout/toolbar"/>
+
     <LinearLayout
-            android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/fullscreen_dialog_padding">
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/fullscreen_dialog_padding"
-    >
-        <EditText
+            android:layout_height="wrap_content">
+
+            <EditText
                 android:id="@+id/feedback_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/text_field_vertical_padding"
-                android:paddingBottom="@dimen/text_field_vertical_padding"
                 android:hint="@string/email_hint"
                 android:inputType="textEmailAddress"
-                android:singleLine="true"
-        />
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/text_field_helper_padding"
-                android:paddingRight="@dimen/text_field_helper_padding"
-                android:paddingBottom="@dimen/text_field_divider_padding"
-                android:textColor="@color/light_text_helper"
-                android:text="@string/helper_optional"
-                style="@android:style/TextAppearance.Small"
-        />
-        <EditText
+                android:singleLine="true"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
                 android:id="@+id/feedback_text"
+                style="@android:style/TextAppearance.Medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/text_field_vertical_padding"
-                android:paddingBottom="@dimen/text_field_vertical_padding"
-                android:inputType="textMultiLine|textCapSentences"
                 android:hint="@string/feedback_hint"
-                android:scrollbars="vertical"
-                style="@android:style/TextAppearance.Medium"
-        />
+                android:inputType="textMultiLine|textCapSentences"
+                android:scrollbars="vertical"/>
+        </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 </LinearLayout>
