--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -14,6 +14,7 @@
         android:padding="@dimen/fullscreen_dialog_padding">
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/feedback_email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
