--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -57,18 +57,11 @@
         <Preference
             android:key="@string/prefkey_backup_dropbox"
             android:persistent="false"
-            android:summary="@string/preference_summary_backup_dropbox"
             android:title="@string/preference_title_backup_dropbox"/>
-        <Preference
-            android:key="@string/prefkey_backup_plain_text"
-            android:persistent="false"
-            android:summary="@string/preference_summary_backup_plain_text"
-            android:title="@string/preference_title_backup_plain_text"/>
         <Preference
             android:key="@string/prefkey_backup_json"
             android:persistent="false"
-            android:summary="@string/preference_summary_backup_json"
-            android:title="@string/preference_title_backup_json"/>
+            android:title="@string/preference_title_storage"/>
     </PreferenceCategory>
     <PreferenceCategory
         android:key="@string/prefkey_restore"
@@ -78,12 +71,20 @@
         <Preference
             android:key="@string/prefkey_restore_dropbox"
             android:persistent="false"
-            android:summary="@string/preference_summary_restore_dropbox"
-            android:title="@string/preference_title_restore_dropbox"/>
+            android:title="@string/preference_title_dropbox"/>
         <Preference
             android:key="@string/prefkey_restore_json"
             android:persistent="false"
-            android:summary="@string/preference_summary_restore_json"
-            android:title="@string/preference_title_restore_json"/>
+            android:title="@string/preference_title_storage"/>
+    </PreferenceCategory>
+    <PreferenceCategory
+        android:key="@string/prefkey_export"
+        android:persistent="false"
+        android:title="@string/preference_title_export">
+
+        <Preference
+            android:key="@string/prefkey_backup_plain_text"
+            android:persistent="false"
+            android:title="@string/preference_title_plain_text"/>
     </PreferenceCategory>
 </PreferenceScreen>
